# delimit-action

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SECURITY.md  action.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: identity-guard-reusable.yml  release.yml  smoke-test.yml  test.yml
core/: __init__.py  ci_formatter.py  diff_engine_v2.py  explainer.py  generator_drift.py  policy_engine.py  spec_detector.py  webhook.py
delimit_gateway/: __init__.py  cli.py
schemas/: __init__.py  base.py  evidence.py  requests.py  requests_v2.py
src/: index.ts  review.ts
tasks/: validate_api_v2.py  validate_api_v3.py
tests/: test_action_yml_comment_403.py  test_action_yml_comment_funnel_link.py  test_action_yml_fork_summary_fallback.py  test_action_yml_github_script_no_interpolation.py  test_core.py  test_diff_context_severity.py  test_diff_engine_expanded.py  test_engine_contract_parity.py  test_generator_drift.py  test_json_schema_diff.py  test_swagger2_definitions.py  test_webhook.py
