[project]
name = "delimit-gateway"
version = "0.1.0"
description = "Delimit Gateway - Unified API for governance tasks"
authors = [{name = "Delimit Team"}]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "black",
    "ruff",
]
mcp = [
    "fastmcp>=0.1.0",
]

[project.scripts]
delimit = "delimit_gateway.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"